--- a/Final/final.tex
+++ b/Final/final.tex
@@ -223,7 +223,7 @@ print(res.mask(np.triu(np.ones(res.shape)).astype(np.bool)))
 \\
 Fisher's z-tests were used to determine if correlations between subject's moods and the weather were significantly different from each other. All subject's correlations were significantly different from each other at the $p=0.01$ level. This indicates that each pair of subjects' relation between temperature and mood was significantly different.\\
 \\
-(h) You submit the result of all these analyses for publication but the editor rejects the manuscript on the basis of: (i) a lack of power to examine your research questions, and (ii) the fact that there are only 4 individuals in your data and, thus --- they claim --- you cannot generalize to the population. Nevertheless, you are convinced --- or just have a hunch --- that there might be something valuable here and write back arguing that the data and analyses are worth disseminating. What would you say to support your argument?\\
+(h) You submit the result of all these analyses for publication but the editor rejects the manuscript on the basis of: (i) a lack of power to examine your research questions, and (ii) the fact that there are only 4 individuals in your data and, thus---they claim---you cannot generalize to the population. Nevertheless, you are convinced---or just have a hunch---that there might be something valuable here and write back arguing that the data and analyses are worth disseminating. What would you say to support your argument?\\
 \\
 I would likely argue that, while these results may or may not be representative of the population, the results presented here are nonetheless interesting and statistically significant. I would concede that the correlation among all subjects, $r=-0.24$, is likely not representative of the population. Despite this, I would argue that there was significant power to significantly detect effects. While the sample size is not large, the magnitude of the effect size was enormous. As such, we still have enough power to detect significant effects at a relevant statistical significance criterion. Further, we have shown that individuals can have significant correlations between mood and weather, and that these can be significantly different from person to person.
 
@@ -367,7 +367,7 @@ This is the same as $-s_X s_Y \leq \mbox{cov}_{XY} \leq s_X s_Y$. The rest is si
 \end{align*}
 which was to be proven.
 
-\clearpage
+% \clearpage
 \problem{}%
 % https://stats.stackexchange.com/questions/32464/how-does-the-correlation-coefficient-differ-from-regression-slope
 (20 points) Say you run a simple regression with predictor variable $X_1$ and outcome variable $Y$. You fit the following model:
@@ -414,9 +414,8 @@ B_2 &= \frac{\mbox{cov}_{Y2} \sigma_1^2 - \mbox{cov}_{Y1} \mbox{cov}_{12}}{\sigm
 r_{Y2}  &= \frac{\mbox{cov}_{Y2}}{\sigma_Y \sigma_2} && \text{Definition of the correlation.}
 \end{align*}
 Therefore the two are equivalent only when $\sigma_{Y} = \sigma_{2}$, so the variables must be on the same scale (for instance, again, when $X_2$ and $Y$ are standardized).\\
-\\
 
-\clearpage
+% \clearpage
 \problem{}
 (10 points) Suppose you are hired to serve as a statistical consultant. In each of the following cases, what advice (if any) would you give to your client concerning the procedures and/or conclusions he or she has drawn, or about the kind of statistical techniques most suitable? Be sure to briefly explain the reasoning underlying your advice.\\
 \\
@@ -440,7 +439,7 @@ This type of study could be analyzed with repeated measures ANOVA, but it is pro
 \\
 The solution, of course, depends on what the researcher is researching (and how small the grant is). Each of these methods is perfectly valid, but the results that can be drawn from the different data collections methods will vary. Most of these methods (with the exception of the first), involve taking multiple measurements from individual(s). These methods will allow the researcher to conduct repeated measures tests on their data. If the researcher is not interested in changes with respect to time, they should probably choose the first method. If the researcher has enough money to think that ``any combination of the above'' methods is a valid choice, then they should choose \textit{all} of the methods. That being said, no good answer can be given to this question without knowing more about what is being researched.
 
-\clearpage
+% \clearpage
 \problem{Extra Credit}
 
 (10 points) Explain what it means to say that a correlation is a covariance expressed in z-scores? Derive numerically the formula for a correlation based on the formula from a covariance (and describe the steps in your own words).\\
