add source for problem 3

--- a/Final/final.tex
+++ b/Final/final.tex
@@ -304,6 +304,13 @@ The main effect of biological sex yielded an F ratio of $F(1, 196) = 4.27, p < .
 
 An analysis of simple effects showed that the effect of biological sex was significant for sports, $F(1, 99) = 10.1, p < 0.01$, but not for other extracurriculars, $F(1, 97) = 0.1, p = 0.75$. Therefore, there is no evidence that biological sex effects PSA for students participating in other extracurriculars. For females, sports extracurriculars showed a larger adolescent PSA $(M=0.65, SD=0.99)$ than for males $(M=0.06, SD=0.86)$. The descriptive statistics for these analyses are presented in Tables~\ref{psa1} and~\ref{psa2}. \\
 
+\begin{lstlisting}
+# Output is not shown here, but reported directly in the above paragraphs
+df = pd.read_csv('socialacceptance.csv')
+print(anova_lm(ols('psa ~ C(female)*C(sports)', df).fit(), typ=2))
+print(df.groupby(('female', 'sports')).agg(['mean', 'std']).psa)
+\end{lstlisting}
+
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{lrrrr}
@@ -321,6 +328,11 @@ Residual      & 164.24 & 196 &       &           \\
 \label{psa1}
 \end{table}
 
+\begin{lstlisting}
+print(anova_lm(ols('psa ~ C(female)', df.query('sports == 0')).fit(), typ=2))
+print(anova_lm(ols('psa ~ C(female)', df.query('sports == 1')).fit(), typ=2))
+\end{lstlisting}
+
 \begin{table}[htdp]
 \begin{center}
 \begin{tabular}{l r r r r r}
@@ -336,6 +348,10 @@ Source & $SS$ & $df$ & $F$ & $PR(>F)$ \\
 \caption{Simple Effects Analysis for Adolescent PSA Study}
 \label{psa2}
 \end{table}
+
+\begin{lstlisting}
+sns.factorplot(x='female', y='psa', hue='sports', data=df, order=[0, 1])
+\end{lstlisting}
 
 \begin{figure}[h!]
 \begin{center}
